--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,py310,py311,py312
+envlist = py310, py311, py312, ruff
 skip_missing_interpreters = True
 
 [testenv]
@@ -12,6 +12,9 @@ deps =
 commands = py.test -vs tests/
 usedevelop = True
 
-[testenv:flake8]
-deps = flake8
-commands = flake8 --show-source watson/ tests/ scripts/
+[testenv:ruff]
+deps =
+    ruff
+commands =
+    ruff check watson/ tests/ scripts/*.py --extend-exclude=tests/resources
+    ruff format watson/ tests/ scripts/*.py --check --exclude=tests/reousrces
