--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,12 @@ mkdocs = "^1.6.0"
 mkdocs-bootswatch = "^1.1"
 ruff = "^0.6.1"
 
+[tool.poetry.group.extras-dev]
+optional = true
+
+[tool.poetry.group.extras-dev.dependencies]
+ipython = "^8.26.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
